<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_headings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp">
    <TextView
        android:id="@+id/tv_news_1"
        style="@style/tv_heading"
        android:text="@string/tv_news_1"/>
    <TextView
        android:id="@+id/tv_news_2"
        style="@style/tv_heading"
        android:text="@string/tv_news_2"/>
    <TextView
        android:id="@+id/tv_news_3"
        style="@style/tv_heading"
        android:text="@string/tv_news_3"/>
    <TextView
        android:id="@+id/tv_news_4"
        style="@style/tv_heading"
        android:text="@string/tv_news_4"/>
    <TextView
        android:id="@+id/tv_news_5"
        style="@style/tv_heading"
        android:text="@string/tv_news_5"/>
    <TextView
        android:id="@+id/tv_news_6"
        style="@style/tv_heading"
        android:text="@string/tv_news_6"/>
</androidx.appcompat.widget.LinearLayoutCompat>